objects/ssot__ContactProfile__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetLiquidationValueAmount__c</fullName>
        <label>Asset Liquidation Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BirthSexType__c</fullName>
        <label>Birth Sex Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessOwnershipValueAmount__c</fullName>
        <label>Business Ownership Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HousingStatus__c</fullName>
        <label>Housing Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contact Profile Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeAmount__c</fullName>
        <label>Income Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LivingArrangementType__c</fullName>
        <label>Living Arrangement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherAssetsValueAmount__c</fullName>
        <label>Other Assets Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OtherNonprofitGiftAmount__c</fullName>
        <label>Other Nonprofit Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OtherNonprofitGiftCount__c</fullName>
        <label>Other Nonprofit Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RealEstateValueAmount__c</fullName>
        <label>Real Estate Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringDonorType__c</fullName>
        <label>Recurring Donor Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceSubType__c</fullName>
        <label>Residence Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceType__c</fullName>
        <label>Residence Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetirementSavingsAmount__c</fullName>
        <label>Retirement Savings Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StockValueAmount__c</fullName>
        <label>Stock Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TribalAffiliationType__c</fullName>
        <label>Tribal Affiliation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>